--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ description = "User mode NAT-PT service"
 
 [dependencies]
 tun-tap = "0.1"
+packet = "0.1"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+byteorder = "1.3"
